Version ClaSS-0.9.26 release (2010/9/21)
-----------------------------------------

Transport editing added to the InfoBook. Also transport displayed in the
Register.

Added option for automatic setting of return journey.

Made the default SEN MedBook lists display all flagged students if not
too many. Total count added to sidebar.


Version ClaSS-0.9.25 release (2010/9/11)
-----------------------------------------

Included spellcheck for tinyMCE.

Enrolment assessments now part of the studentfields for listing in
InfoBook.

Make login to eportfolio in hidden iframe suitable for access to
student report archive.

Moved the studentlist table row extra div out to an include.

Targets tick added but no targets entry yet.

The community edit page can now set transport bookings.

A fix to delete_transport so it sets the community stay correctly.

Basic Targets working including fetchTargets function.

Fix to saved views.

Added clubs to the list_community search and both transport and clubs
to the single field array. The studnet lists are now titled.

Option to use dob as epf password.


Version ClaSS-0.9.24 release (2010/8/25)
-----------------------------------------

Changed the epf fileurl function to be epf_list_files.

Made use of epf_list_files for the InfoBook's student_reports page.

Fixed list_assessment_profiles to use multiple courses.

Student lists for buses using transport_print.

Added contact address to student extra display fields.

Transport groups now part Info search.

Removed table cridbid in favour of using component. Allows adding
seqeunce to course subjects and also added weighting.

Transition all old scripts still using cribid to use curriculum
functions.

Replaced deprecated php function split with explode.

Saved views in the InfoBook student_list. Uses a new categorydef
type='col' to store the tagnames on display.

Added a weight field to eidsid which is only currently reflected in
Assessments as weight=2 for double valued subjects.
