@@ -48,6 +48,10 @@ $string['otherfamilymember']='Other family';
 $string['religiouscontact']='Religious contact';
 $string['agent']='Agent';
 $string['stepparent']='Step parent';
+$string['grandparent']='Grandparent';
+$string['grandfather']='Grandfather';
+$string['grandmother']='Grandmother';
+$string['familyfirend']='Family friend';
 $string['contactdetails']='Contact details';
 $string['contactaddress']='Contact address';
 $string['contactphones']='Contact phones';
@@ -150,6 +154,7 @@ $string['srd']='Sr. D.';
 $string['srada']='Sra. Da.';
 $string['miss']='Miss';
 $string['dr']='Dr.';
+$string['major']='Major';
 $string['applicationnotes']='Application notes';
 $string['applicationcategory']='Application category';
 $string['applicationdate']='Date of first application';
